# TG_BOT_DJANGO

./: .gitignore  pyproject.toml
game_bot/: apps.py  models.py  urls.py  views.py
game_bot/migrations/: 0001_initial.py  0002_auto_20210225_1652.py  0003_auto_20210225_1702.py
game_bot/templates/: scores_list.html
tg_bot/: asgi.py  settings.py  urls.py  wsgi.py
tg_bot/templates/: index.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
