[tool.poetry]
name = "tg_bot_django"
version = "0.1.0"
description = ""
authors = ["egor187 <py.egor.py@gmail.com>"]
packages = [
    { include = "tg_bot" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
psycopg2 = "^2.8.6"
gunicorn = "^20.0.4"
rollbar = "^0.15.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
whitenoise = "^5.2.0"
django-filter = "^2.4.0"
django-bootstrap4 = "^2.3.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
